# SwiftPackageWriter

./: .gitignore  Package.swift  README.md  pyproject.toml  setup.py
Sources/SwiftPackage/: DecodableExtensions.swift  PackageTargets.swift  PackageTemplate.swift  SwiftPackage.swift  SyntaxExtensions.swift
Sources/SwiftPackageWriter/: SwiftPackageWriter.swift
src/swiftpackagewriter/: __init__.py
